--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
             <h2>Ningún mensaje fue encontrado</h2>
             <p>Ingresa el texto que desees encriptar o desincriptar</p>
 
-
+            <button id="copyBTN">Copiar texto</button>
         </div>
 
+        <p class="copyright">Hector Alegria - Web Developer</p>
+
     </main>
+    
 
     <script src="code.js"></script>
 </body>
