--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <div class="right">
 
             <img src="assets/personaje.png" alt="personaje">
-            <h2>Ningún mensaje fue encontrado</h2>
-            <p>Ingresa el texto que desees encriptar o desincriptar</p>
+            <h2>Acá se visualizara todos sus mensajes</h2>
+            <p>Sus mensajes podran ser encriptados o desencriptados</p>
 
             <button id="copyBTN">Copiar texto</button>
         </div>
