--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
         <div class="left">
 
             <!-- <input type="text" id="textID" placeholder="Escriba aquí su texto"> -->
-            <textarea name="" id="" placeholder="Escriba aquí su texto"></textarea>
+            <textarea name="" id="textArea" placeholder="Escriba aquí su texto"></textarea>
             <div>
                 <p>
                     
@@ -30,13 +30,13 @@
         </div>
 
         <!--  -->
-        <div class="right">
+        <div class="right" id="resultado">
 
             <img src="assets/personaje.png" alt="personaje">
             <h2>Acá se visualizara todos sus mensajes</h2>
             <p>Sus mensajes podran ser encriptados o desencriptados</p>
 
-            <button id="copyBTN">Copiar texto</button>
+            
         </div>
 
         <p class="copyright">Hector Alegria - Web Developer</p>
